<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentWeatherActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="282dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_temp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/temperature"
        app:layout_constraintEnd_toStartOf="@+id/tv_temp_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <ImageView
        android:id="@+id/im_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_temp_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tv_temp_value"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_temp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_temp_max"
        android:layout_width="150dp"
        android:layout_height="59dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="32dp"
        android:text="@string/temp_max"
        app:layout_constraintEnd_toStartOf="@+id/tv_temp_maxvalue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_temp" />

    <TextView
        android:id="@+id/tv_temp_maxvalue"
        android:layout_width="129dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toEndOf="@+id/tv_temp_max"
        app:layout_constraintTop_toBottomOf="@+id/tv_temp_value" />

    <TextView
        android:id="@+id/tv_temp_min"
        android:layout_width="146dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="28dp"
        android:text="@string/temp_min"
        app:layout_constraintEnd_toStartOf="@+id/tv_temp_minvalue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_temp_max" />

    <TextView
        android:id="@+id/tv_temp_minvalue"
        android:layout_width="139dp"
        android:layout_height="59dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toEndOf="@+id/tv_temp_min"
        app:layout_constraintTop_toBottomOf="@+id/tv_temp_maxvalue" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="172dp"
        android:layout_height="61dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="28dp"
        android:text="@string/desc"
        app:layout_constraintEnd_toStartOf="@+id/tv_desc_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_temp_min" />

    <TextView
        android:id="@+id/tv_desc_value"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toEndOf="@+id/tv_desc"
        app:layout_constraintTop_toBottomOf="@+id/tv_temp_minvalue" />

    <TextView
        android:id="@+id/tv_humid"
        android:layout_width="163dp"
        android:layout_height="58dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="132dp"
        android:text="@string/humid"
        app:layout_constraintBottom_toTopOf="@+id/tv_wind"
        app:layout_constraintEnd_toStartOf="@+id/tv_humid_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

    <TextView
        android:id="@+id/tv_humid_value"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="43dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_wind_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_humid"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc_value" />

    <TextView
        android:id="@+id/tv_wind"
        android:layout_width="138dp"
        android:layout_height="49dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:text="@string/wind"
        app:layout_constraintEnd_toStartOf="@+id/tv_wind_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_humid" />

    <TextView
        android:id="@+id/tv_wind_value"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_forecast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_wind"
        app:layout_constraintTop_toBottomOf="@+id/tv_humid_value" />

    <Button
        android:id="@+id/bt_forecast"
        android:layout_width="164dp"
        android:layout_height="69dp"
        android:layout_marginBottom="24dp"
        android:text="@string/forecast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_wind" />
</androidx.constraintlayout.widget.ConstraintLayout>